--- a/run_inversion.ipynb
+++ b/run_inversion.ipynb
@@ -11,9 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook provides the settings to reproduce the Results section in Nummelin et al (2018). Most of the analysis was originally done in Python 2.7, but this notebook is written in Python 3.6 and the scripts should be compatible with that.\n",
+    "This notebook provides the settings to reproduce the results section in Nummelin et al (2018). Most of the analysis was originally done in Python 2.7, but this notebook is written in Python 3.6. Most of the scripts should be compatible with this change. Please note that this notebook is first and foremost an example how to perform the analysis, it is likely that one can write new code that is much faster and cleaner. Please do not hesitate to contact me in case you want to reproduce all/parts of the results (aleksi [dot] nummelin [at] jhu [dot] edu).\n",
     "\n",
-    "Before running any of this make sure you have a working python environment (including the MicroInverse package), you have downloaded the data, and created a smoothed versions of the data."
+    "Before running any of this make sure you have a working python environment (including the MicroInverse package), you have downloaded the data, and created a smoothed versions of the data.\n",
+    "\n",
+    "You can load the SST data from https://www.esrl.noaa.gov/psd/data/gridded/data.noaa.oisst.v2.highres.html (AVHRR only). Make sure to download the daily sea surface temperature, not the anomaly (we will calculate it on our own). SST AVHRR-AMSR files can be downloaded https://www.ncei.noaa.gov/thredds/catalog/OisstBase/NetCDF/AVHRR-AMSR/catalog.html. See download_AMSR_AVHRR.sh for example how to download the data. Run create_smoothed_fields.py to create the spatially smoothed versions of the files."
    ]
   },
   {
@@ -85,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Plot data - again, change the paths to match your system\n",
+    "# Plot data - again, change the paths to match your system\n",
     "exec(open('micro_inverse_plotting_all_in_one_over_several_Taus.py').read())"
    ]
   },
@@ -95,7 +97,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Plot the data \n",
+    "# Create eddy speed\n",
+    "exec(open('eddy_trajectory_analysis.py').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the velocity data \n",
     "exec(open('velocity_comparison.py').read())"
    ]
   },
@@ -266,6 +278,22 @@
     "    for Tau in [1,2,3,4,5,6,7,8,10]:                                           \n",
     "        print(smt, Tau)\n",
     "        exec(open('micro_inverse_python_clean.py').read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figures in section 4.b "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exec(open('methods_paper_plot_medians_2.py').read())"
    ]
   }
  ],
